--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="bio">
                     <h1>About Me</h1>
-                    <p>I'm a passionate full-stack developer with a background in Chemistry, bringing scientific rigor to web development. My journey includes contributing to impactful projects like <a href="https://www.hbb.chat" target="_blank">HBB.chat</a>, a real-time communication platform.</p>
+                    <p>I'm a passionate Software developer with a background in Chemistry, bringing scientific rigor to web development. My journey includes contributing to impactful projects like <a href="https://www.hbb.chat" target="_blank">HBB.chat</a>, a real-time communication platform.</p>
                     <div class="skills">
                         <h2>Technical Skills</h2>
                         <ul class="skills-list">
