--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
     <meta property="og:description" content="Web Developer Portfolio showcasing projects and technical blog">
-    <meta property="og:image" content="assets/images/og-image.jpg">
+    <meta property="og:image" content="https://olatunde-portfolio.web.app/assets/images/og-image.jpg">
 </head>
 <body>
     <nav class="navbar">...</nav>
