--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Olatunde's Portfolio - Web Developer & Technical Writer">
     <meta name="keywords" content="web development, portfolio, JavaScript, HTML, CSS">
-    <title>Olatunde | software Developer</title>
+    <title>Olatunde | Software Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
@@ -38,6 +37,42 @@
                     <a href="resume.html" class="btn primary">View Resume</a>
                     <a href="#contact" class="btn secondary">Get in Touch</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="container">
+            <div class="about-grid">
+                <!-- Profile Image -->
+                <div class="profile-img">
+                    <img src="assets/images/olatu-profile.jpg" alt="Olatunde's Profile Picture">
+                </div>
+                <!-- Bio -->
+                <div class="bio">
+                    <h1>Hi, I'm Olatunde</h1>
+                    <p>
+                        I am a passionate full-stack developer specializing in creating responsive, 
+                        high-quality web applications. I focus on delivering seamless user experiences 
+                        using modern web technologies and ensuring that each project is optimized for 
+                        performance and usability.
+                    </p>
+                    <a href="about.html">Learn More About Me</a>
+                </div>
+            </div>
+
+            <!-- Skills Section -->
+            <div class="skills">
+                <h2>Skills & Technologies</h2>
+                <ul class="skills-list">
+                    <li>HTML5, CSS3, JavaScript</li>
+                    <li>React, Next.js</li>
+                    <li>Node.js, Express</li>
+                    <li>Firebase, PostgreSQL</li>
+                    <li>Tailwind CSS, Bootstrap</li>
+                    <li>Git & GitHub</li>
+                </ul>
             </div>
         </div>
     </section>
