--- a/about.html
+++ b/about.html
@@ -10,11 +10,22 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
     <meta property="og:description" content="Web Developer Portfolio showcasing projects and technical blog">
-    <meta property="og:image" content="https://olatunde-portfolio.web.app/assets/images/og-image.jpg">
+    <meta property="og:image" content="https://olatunde-portfolio.web.app/assets/images/oga-image.png">
 </head>
 <body>
-    <nav class="navbar">...</nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="container">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- Main About Section -->
     <main class="about-section">
         <div class="container">
             <div class="about-grid">
@@ -31,7 +42,17 @@
                             <li>JavaScript (ES6+)</li>
                             <li>React.js</li>
                             <li>Node.js</li>
+                            <li>Zustand</li>
+                            <li>Next.js</li>
+                            <li>Typescript</li>
+                            <li>JavaScript</li>
+                            <li>PostgreSQL</li>
+                            <li>Tailwind CSS</li>
                             <li>Firebase</li>
+                            <li>Git</li>
+                            <li>Github</li>
+                            <li>Express</li>
+                            <li>Bootsrap</li>
                         </ul>
                     </div>
                 </div>
@@ -39,6 +60,10 @@
         </div>
     </main>
 
-    <footer class="footer">...</footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <!-- You can add footer content here -->
+        <p>&copy; 2025 Olatunde. All rights reserved.</p>
+    </footer>
 </body>
 </html>
