--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,6 @@
                 <li><a href="assets/resume.pdf" download="Olatunde_Resume.pdf">Resume</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
-            <div class="hamburger">☰</div>
         </div>
     </nav>
 
@@ -68,13 +67,13 @@
         <div class="container">
             <div class="social-links">
                 <a href="https://github.com/olatundeolayemi" target="_blank" rel="noopener">
-                    <img src="assets/images/github-icon.svg" alt="GitHub" loading="lazy">
+                    <img src="assets/images/github-icon.jpg" alt="GitHub" loading="lazy">
                 </a>
                 <a href="https://www.linkedin.com/in/olatunde-olayemi" target="_blank" rel="noopener">
-                    <img src="assets/images/linkedin-icon.svg" alt="LinkedIn" loading="lazy">
+                    <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn" loading="lazy">
                 </a>
                 <a href="https://www.hbb.chat" target="_blank" rel="noopener">
-                    <img src="assets/images/hbb-icon.svg" alt="HBB.chat" loading="lazy">
+                    <img src="assets/images/hbb.png" alt="HBB.chat" loading="lazy">
                 </a>
             </div>
             <p class="copyright">&copy; 2025 Olatunde. All rights reserved.</p>
