--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Olatunde's Portfolio - Web Developer & Technical Writer">
     <meta name="keywords" content="web development, portfolio, JavaScript, HTML, CSS">
-    <title>Olatunde | Software Developer</title>
+    <title>Olatunde Olayemi| Software Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
@@ -15,17 +15,19 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo">Olatunde</a>
+        <div class="container navbar-inner">
+            <div class="title-logo">
+                <div class="site-title">Olatunde Olayemi | Software Developer</div>
+                <a href="index.html" class="logo">Olatunde</a>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
-            <div class="hamburger">☰</div>
         </div>
-    </nav>
+    </nav>      
 
     <!-- Hero Section -->
     <section class="hero">
@@ -47,7 +49,7 @@
             <div class="about-grid">
                 <!-- Profile Image -->
                 <div class="profile-img">
-                    <img src="assets/images/olatu-profile.jpg" alt="Olatunde's Profile Picture">
+                    <img src="assets/images/profile.jpg" alt="Olatunde" loading="lazy">
                 </div>
                 <!-- Bio -->
                 <div class="bio">
@@ -62,16 +64,24 @@
                 </div>
             </div>
 
-            <!-- Skills Section -->
-            <div class="skills">
-                <h2>Skills & Technologies</h2>
-                <ul class="skills-list">
-                    <li>HTML5, CSS3, JavaScript</li>
-                    <li>React, Next.js</li>
-                    <li>Node.js, Express</li>
-                    <li>Firebase, PostgreSQL</li>
-                    <li>Tailwind CSS, Bootstrap</li>
-                    <li>Git & GitHub</li>
+            <!-- Contact Section -->
+            <div class="contact-me">
+                <h2>Contact Me</h2>
+                <p>You can reach me via:</p>
+                <ul class="contact-links">
+                    <li>
+                        LinkedIn: 
+                        <a href="https://www.linkedin.com/in/olatunde-olayemi" target="_blank" rel="noopener">
+                            <img src="assets/images/linkedin-icon.svg" alt="LinkedIn"> 
+                            Olatunde Olayemi
+                        </a>
+                    </li>
+                    <li>
+                        WhatsApp: 
+                        <a href="https://wa.me/2348118147015" target="_blank" rel="noopener">
+                            Chat on WhatsApp (08118147015)
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -82,13 +92,13 @@
         <div class="container">
             <div class="social-links">
                 <a href="https://github.com/olatundeolayemi" target="_blank" rel="noopener">
-                    <img src="assets/images/github-icon.svg" alt="GitHub">
+                    <img src="assets/images/github-icon.jpg" alt="GitHub">
                 </a>
                 <a href="https://www.linkedin.com/in/olatunde-olayemi" target="_blank" rel="noopener">
-                    <img src="assets/images/linkedin-icon.svg" alt="LinkedIn">
+                    <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn">
                 </a>
                 <a href="https://www.hbb.chat" target="_blank" rel="noopener">
-                    <img src="assets/images/hbb-icon.svg" alt="HBB.chat Project">
+                    <img src="assets/images/hbb.png" alt="HBB.chat Project">
                 </a>
             </div>
             <p>&copy; 2025 Olatunde. All rights reserved.</p>
