--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container navbar-inner">
             <div class="title-logo">
                 <div class="site-title">Olatunde Olayemi | Software Developer</div>
-                <a href="index.html" class="logo">Olatunde</a>
+                <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
