--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technical Blog | Olatunde</title>
+    <title>My Blog | Olatunde</title>
     <meta name="description" content="Web development tutorials and technical insights">
     <link rel="stylesheet" href="css/style.css">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Blog",
-        "name": "Olatunde's Technical Blog",
+        "name": "Olatunde's Blog,
         "description": "Web development tutorials and insights",
         "author": {
             "@type": "Person",
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="logo">Olatunde</a>
+            <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -38,7 +38,7 @@
 
     <main class="blog-listing">
         <div class="container">
-            <h1>Technical Writings</h1>
+            <h1>WELCOME TO MY BLOG</h1>
             
             <!-- Web Performance Article -->
             <article class="blog-preview">
