--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
+            <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
