--- a/about.html
+++ b/about.html
@@ -63,8 +63,22 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <!-- You can add footer content here -->
-        <p>&copy; 2025 Olatunde. All rights reserved.</p>
+        <div class="container">
+            <div class="social-links">
+                <a href="https://github.com/olatundeolayemi" target="_blank" rel="noopener">
+                    <img src="assets/images/github-icon.jpg" alt="GitHub" loading="lazy">
+                </a>
+                <a href="https://www.linkedin.com/in/olatunde-olayemi" target="_blank" rel="noopener">
+                    <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn" loading="lazy">
+                </a>
+                <a href="https://www.hbb.chat" target="_blank" rel="noopener">
+                    <img src="assets/images/hbb_logo.jpg" alt="HBB.chat" loading="lazy">
+                </a>
+            </div>
+            <p class="copyright">&copy; 2025 Olatunde. All rights reserved.</p>
+        </div>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
