--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
                     <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn" loading="lazy">
                 </a>
                 <a href="https://www.hbb.chat" target="_blank" rel="noopener">
-                    <img src="assets/images/hbb.png" alt="HBB.chat" loading="lazy">
+                    <img src="assets/images/hbb_logo.jpg" alt="HBB.chat" loading="lazy">
                 </a>
             </div>
             <p class="copyright">&copy; 2025 Olatunde. All rights reserved.</p>
