--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container navbar-inner">
-            <div class="title-logo">
-                <div class="site-title">Olatunde Olayemi | Software Developer</div>
-                <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
-            </div>
+            <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -27,7 +24,7 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
-    </nav>      
+    </nav>    
 
     <!-- Hero Section -->
     <section class="hero">
@@ -79,6 +76,7 @@
                     <li>
                         WhatsApp: 
                         <a href="https://wa.me/2348118147015" target="_blank" rel="noopener">
+                            <img src="assets/images/whatsapp.jpg" alt="WhatsApp">
                             Chat on WhatsApp (08118147015)
                         </a>
                     </li>
@@ -98,7 +96,7 @@
                     <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn">
                 </a>
                 <a href="https://www.hbb.chat" target="_blank" rel="noopener">
-                    <img src="assets/images/hbb.png" alt="HBB.chat Project">
+                    <img src="assets/images/hbb_logo.jpg" alt="HBB.chat Project">
                 </a>
             </div>
             <p>&copy; 2025 Olatunde. All rights reserved.</p>
