--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li>
                         LinkedIn: 
                         <a href="https://www.linkedin.com/in/olatunde-olayemi" target="_blank" rel="noopener">
-                            <img src="assets/images/linkedin-icon.svg" alt="LinkedIn"> 
+                            <img src="assets/images/linkedin-icon.jpg" alt="LinkedIn"> 
                             Olatunde Olayemi
                         </a>
                     </li>
