--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="web development, portfolio, JavaScript, HTML, CSS">
     <title>About | Olatunde</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
     <meta property="og:description" content="Web Developer Portfolio showcasing projects and technical blog">
