--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <title>My Blog | Olatunde</title>
     <meta name="description" content="Web development tutorials and technical insights">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
