--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="web development, portfolio, JavaScript, HTML, CSS">
     <title>Olatunde Olayemi| Software Developer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
     <meta property="og:description" content="Web Developer Portfolio showcasing projects and technical blog">
@@ -62,7 +63,7 @@
             </div>
 
             <!-- Contact Section -->
-            <div class="contact-me">
+            <div id="contact" class="contact-me">
                 <h2>Contact Me</h2>
                 <p>You can reach me via:</p>
                 <ul class="contact-links">
