--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="web development, portfolio, JavaScript, HTML, CSS">
     <title>Olatunde Olayemi| Software Developer</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@600;700;800&family=Orbitron:wght@600;700;800&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Olatunde's Portfolio">
     <meta property="og:description" content="Web Developer Portfolio showcasing projects and technical blog">
-    <meta property="og:image" content="https://olatunde-portfolio.web.app/assets/images/og-image.jpg">
+    <meta property="og:image" content="https://olatunde-portfolio.web.app/assets/images/oga-image.png">
 </head>
 <body>
     <!-- Navigation -->
