--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <title>My Blog | Olatunde</title>
     <meta name="description" content="Web development tutorials and technical insights">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@600;700;800&family=Orbitron:wght@600;700;800&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
