--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <img src="assets/images/hbb_logo.jpg" alt="HBB.chat Project">
                 </a>
             </div>
-            <p>&copy; 2025 Olatunde. All rights reserved.</p>
+            <p>&copy; 2025 Olatunde Olayemi. All rights reserved.</p>
         </div>
     </footer>
 
