--- a/blog.html
+++ b/blog.html
@@ -25,17 +25,28 @@
     </script>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="assets/resume.pdf" download="Olatunde_Resume.pdf">Resume</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-        </div>
-    </nav>
+    <!-- Navigation -->
+<nav class="navbar">
+    <div class="container navbar-inner">
+      <!-- Logo/Brand -->
+      <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
+  
+      <!-- Hamburger Menu for Mobile -->
+      <button class="hamburger" aria-label="Menu">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M3 12h18M3 6h18M3 18h18"/>
+        </svg>
+      </button>
+  
+      <!-- Navigation Links -->
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+  </nav>
 
     <main class="blog-listing">
         <div class="container">
