--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,28 @@
     <meta property="og:image" content="assets/images/og-image.jpg">
 </head>
 <body>
-    <nav class="navbar">...</nav>
+    <!-- Navigation -->
+<nav class="navbar">
+    <div class="container navbar-inner">
+      <!-- Logo/Brand -->
+      <a href="index.html" class="logo">OLATUNDE OLAYEMI</a>
+  
+      <!-- Hamburger Menu for Mobile -->
+      <button class="hamburger" aria-label="Menu">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M3 12h18M3 6h18M3 18h18"/>
+        </svg>
+      </button>
+  
+      <!-- Navigation Links -->
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+  </nav>
 
     <main class="resume-section">
         <div class="container">
